Release notes by PHOCOA version number.

Legend:
[bugfix] - Bug fix.
[new] - New feature.
[BC-break] - Backwards-compatibility may be broken. Update your code to "the new way" as noted.
[BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.

********** BUMP bootstrap.php VERSION # ****************
Version 0.2.1 - ??

Version 0.2.0 - 1/21/2009
- [new] Add preventAbandondedForm property to WFYAHOO_widget_Tab. Given the ID of a form element, this will prevent navigation to another tab with "dirty" data.
- [new] Upgrade YUI to 2.6.0.
- [new] Upgrade Prototype to 1.6.0.3
- [new] add argument passing infrastructure for Appcelerator
- [new] Add WFYAHOO_widget_TreeView option for autoExpandUntilChoices 
- [new] Add WFYAHOO_widget_TreeView function to allow reloading of entire tree
- [new] Add WFYAHOO_widget_TreeView property "queryFieldId" to allow linking a WFTextField to the tree for the purpose of making a filterable/searchable tree.
- [new] Added several new KVC methods. See the docs for details, but here are the new methods.
          valuesForKeys, valuesForKeyPaths, (static) valueForStaticKey, (static) valueForStaticKeyPath
        And optional functions for handling undefined keys: valueForUndefinedKey, (static) valueForUndefinedStaticKey.
        To use static KVC with YAML files, just set the instanceID to any valid instance, empty controllerKey, and modelKeyPath of "YourObject::staticKeyPath.key"
- [new] Add smarty JSON block plugin to make it easy to create JSON in templates with nice formatting and still pass it safely into a JS var.
- [new] Add WFSearchField widget. This is a text box with an "X" clear and "GO" buttons. Integrate with WFYAHOO_widget_TreeView.
- [new] Add WFYAHOO_widget_Carousel control.
- [new] Add expandOnClick property to WFYAHOO_widget_TreeView to make it easy to turn off the default behavior of expanding nodes when the label is clicked.