@@ -40,6 +40,7 @@ svn st | grep '^?' | awk '{ print $2; }' | xargs svn add
 TODO
 
 1.0 Milestone:
+- Make phocoa shell not die on fatal errors (use http://us2.php.net/manual/en/intro.runkit.php)
 - Clean up module instantiation (needed for RESTful ease as well). See: http://misko.hevery.com/2008/09/10/where-have-all-the-new-operators-gone/
 - Incorporte PHP Speedy or Minify (http://code.google.com/p/minify). Minify looks better.
 - BUILDFile of some kind: rake? phing? This will do things like minify JS, bump version #, etc.
