@@ -169,7 +169,9 @@ class WFIncluding
                 'WFUrlencodeTransformer' => 'framework/ValueTransformers/WFUrlencodeTransformer.php',
                 'WFObjectController' => 'framework/WFObjectController.php',
                 'WFArrayController' => 'framework/WFArrayController.php',
+                'WFArray' => 'framework/WFArray.php',
                 'WFError' => 'framework/WFError.php',
+                'WFErrorsException' => 'framework/WFError.php',
                 'WFExceptionReporting' => 'framework/WFExceptionReporting.php',
                 'WFUnixDateFormatter' => 'framework/widgets/WFFormatter.php',
                 'WFSQLDateFormatter' => 'framework/widgets/WFFormatter.php',
